[package]
name = "raunch"
version = "1.0.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A safe wrapper around launchd launch_activate_socket"
repository = "https://github.com/bbqsrc/raunch"
keywords = ["macos", "launchd", "socket", "activation"]
categories = ["os::macos-apis"]

[dependencies]
libc = "0.2.69"
